syntax = "proto3";

package ecommerce.order;

option go_package = "proto/generated/ecommerce/order;orderpb";

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
  double price_per_unit = 3;
}

message Order {
  string id = 1;
  string user_id = 2;
  string order_id = 3;
  string status = 4;
  double total_price = 5;
  string created_at = 6;
  string updated_at = 7;
  repeated OrderItem items = 8;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  string status = 3;
}

message CreateOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string status = 2;
}

message UpdateOrderResponse {
  string message = 1;
}

message GetOrdersByUserRequest {
  string user_id = 1;
}

message GetOrdersByUserResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);

  rpc GetOrderByID(GetOrderRequest) returns (GetOrderResponse);

  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);

  rpc GetOrdersByUserID(GetOrdersByUserRequest) returns (GetOrdersByUserResponse);
}
